--- a/annotation-processor/build.gradle
+++ b/annotation-processor/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.2.2'
     id 'io.spring.dependency-management' version '1.1.4'
+    id 'maven-publish'
 }
 
 configurations {
@@ -33,4 +34,17 @@ bootJar.enabled = false
 jar {
     archiveClassifier = projectArchiveClassifier
     archiveVersion = projectVersion
+}
+
+publishing {
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = "https://maven.pkg.github.com/Fadesml/spring-boot-rsocket-api-client-annotation-processor"
+            credentials {
+                username = System.getenv("GITHUB_ACTOR")
+                password = System.getenv("GITHUB_TOKEN")
+            }
+        }
+    }
 }
